--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -420,7 +420,7 @@
             <h2 class="section-title">Dịch Vụ Của Chúng Tôi</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card service-card">
+                    <div class="card service-card" style="height:450px;">
                         <img src="~/images/football-game.jpg" class="card-img-top" alt="Football Game" height="250px">
                         <div class="card-body">
                             <h5 class="card-title">Đặt Sân Bóng</h5>
@@ -429,7 +429,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card service-card">
+                    <div class="card service-card" style="height:450px;">
                         <img src="~/images/football-coaching.jpg" class="card-img-top" alt="Football Coaching" height="250px">
                         <div class="card-body">
                             <h5 class="card-title">Huấn Luyện Viên</h5>
@@ -438,7 +438,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card service-card">
+                    <div class="card service-card" style="height:450px;">
                         <img src="~/images/football-tournament.jpg" class="card-img-top" alt="Football Tournament" height="250px">
                         <div class="card-body">
                             <h5 class="card-title">Giải Đấu Bóng Đá</h5>
@@ -453,7 +453,7 @@
     <!-- Address Section -->
     <section class="address-section bg-light py-5">
         <div class="container">
-            <h2 class="section-title">Địa Chỉ Dịch Vụ</h2>
+            <h2 class="section-title">Danh sách các sân bóng mới nhất </h2>
             <p class="section-description">Chúng tôi có các sân bóng tại nhiều vị trí trên toàn quốc. Dưới đây là các địa chỉ bạn có thể ghé thăm:</p>
             <ul class="address-list">
                 <li class="address-item">Sân bóng Tân Bình, TP.HCM</li>
