--- a/Areas/AdminManagement/Views/Bookings/Delete.cshtml
+++ b/Areas/AdminManagement/Views/Bookings/Delete.cshtml
@@ -1,64 +1,132 @@
 ﻿@model FootballFieldManagement.Models.Booking
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa";
     Layout = "~/Areas/AdminManagement/Views/Shared/Admin.cshtml";
 }
 
-<h1>Delete</h1>
+<style>
+    body {
+        background-color: #f0f8ff; /* Màu nền nhẹ */
+        font-family: Arial, sans-serif;
+    }
 
-<h3>Are you sure you want to delete this?</h3>
+    h1 {
+        color: #2f8e2b; /* Màu xanh lá cây bóng đá */
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    h3 {
+        color: #d9534f; /* Màu đỏ cho cảnh báo xóa */
+        text-align: center;
+    }
+
+    h4 {
+        color: #2f8e2b;
+        font-size: 1.2rem;
+    }
+
+    .dl-horizontal dt {
+        font-weight: bold;
+        color: #2f8e2b;
+    }
+
+    .dl-horizontal dd {
+        color: #333;
+    }
+
+    .btn {
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 3px;
+        font-size: 14px;
+    }
+
+    .btn-danger {
+        background-color: #d9534f;
+        color: white;
+        border-color: #d43f00;
+    }
+
+        .btn-danger:hover {
+            background-color: #c9302c;
+            border-color: #ac2925;
+        }
+
+    .btn-back {
+        background-color: #f39c12;
+        color: white;
+        padding: 5px 10px;
+        text-decoration: none;
+        border-radius: 3px;
+    }
+
+        .btn-back:hover {
+            opacity: 0.8;
+        }
+</style>
+
+<h1>Xóa</h1>
+
+<h3>Bạn có chắc chắn muốn xóa không?</h3>
 <div>
-    <h4>Booking</h4>
+    <h4>Thông tin Đặt sân</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row dl-horizontal">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.BookingTime)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.BookingTime)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Duration)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Duration)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TotalPrice)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalPrice)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TotalServicePrice)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalServicePrice)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TotalAmount)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalAmount)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Customer.Username)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Field)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Field.FieldId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Field.FieldName)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="BookingId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-back">Quay lại danh sách</a>
     </form>
 </div>
