--- a/Areas/AdminManagement/Views/Bookings/Details.cshtml
+++ b/Areas/AdminManagement/Views/Bookings/Details.cshtml
@@ -1,61 +1,122 @@
 ﻿@model FootballFieldManagement.Models.Booking
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi tiết Đặt sân";
     Layout = "~/Areas/AdminManagement/Views/Shared/Admin.cshtml";
 }
 
-<h1>Details</h1>
+<style>
+    body {
+        background-color: #f0f8ff; /* Màu nền nhẹ */
+        font-family: Arial, sans-serif;
+    }
+
+    h1 {
+        color: #2f8e2b; /* Màu xanh lá cây bóng đá */
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    h4 {
+        color: #2f8e2b;
+        font-size: 1.2rem;
+    }
+
+    .dl-horizontal dt {
+        font-weight: bold;
+        color: #2f8e2b;
+    }
+
+    .dl-horizontal dd {
+        color: #333;
+    }
+
+    .btn {
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 3px;
+        font-size: 14px;
+    }
+
+    .btn-edit {
+        background-color: #2f8e2b;
+        color: white;
+        margin-right: 10px;
+    }
+
+        .btn-edit:hover {
+            background-color: #1e6a33;
+            border-color: #1e6a33;
+        }
+
+    .btn-back {
+        background-color: #f39c12;
+        color: white;
+    }
+
+        .btn-back:hover {
+            opacity: 0.8;
+        }
+</style>
+
+<h1>Chi tiết Đặt sân</h1>
 
 <div>
-    <h4>Booking</h4>
+    <h4>Thông tin Đặt sân</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row dl-horizontal">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.BookingTime)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.BookingTime)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Duration)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Duration)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TotalPrice)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalPrice)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TotalServicePrice)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalServicePrice)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TotalAmount)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalAmount)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Customer.Username)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Field)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Field.FieldId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Field.FieldName)
         </dd>
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.BookingId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.BookingId" class="btn btn-edit">Chỉnh sửa</a>
+    <a asp-action="Index" class="btn btn-back">Quay lại danh sách</a>
 </div>
