--- a/Areas/AdminManagement/Views/Login/Index.cshtml
+++ b/Areas/AdminManagement/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model FootballFieldManagement.Areas.AdminManagement.Models.Login
+
 @{
     Layout = null;
 }
@@ -19,11 +20,11 @@
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Admin Login</title>
+    <title>Đăng Nhập Quản Trị</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -48,7 +49,7 @@
         .login-title {
             font-weight: 700;
             font-size: 24px;
-            color: #333;
+            color: #2f8e2b; /* Màu xanh lá cây bóng đá */
             text-align: center;
             margin-bottom: 20px;
         }
@@ -57,14 +58,21 @@
             border-radius: 8px;
             margin-top: 10px;
             height: 45px;
-            margin-left:14px;
+            margin-left: 14px;
         }
 
         .btn-primary {
             width: 100%;
             border-radius: 8px;
             margin-top: 20px;
+            background-color: #2f8e2b; /* Màu xanh lá cây bóng đá */
+            border: none;
+            color: white;
         }
+
+            .btn-primary:hover {
+                background-color: #228c22;
+            }
 
         .alert {
             margin-top: 20px;
@@ -75,18 +83,18 @@
 <body class="hold-transition login-page">
 
     <div class="login-box">
-        <div class="login-title">Đăng nhập Admin</div>
+        <div class="login-title">Đăng Nhập Quản Trị</div>
         <form asp-action="Index" method="post">
             <!-- Email input -->
             <input asp-for="Email" type="email" class="custom-input form-control form-control-lg"
-                   placeholder="Email" />
+                   placeholder="Email" required />
 
             <!-- Password input -->
             <input asp-for="Password" type="password" class="custom-input form-control form-control-lg"
                    placeholder="Mật khẩu" required />
 
             <!-- Submit button -->
-            <button type="submit" class="btn btn-primary ">Đăng nhập</button>
+            <button type="submit" class="btn btn-primary ">Đăng Nhập</button>
         </form>
     </div>
 
