--- a/Areas/AdminManagement/Views/Services/Delete.cshtml
+++ b/Areas/AdminManagement/Views/Services/Delete.cshtml
@@ -1,40 +1,94 @@
 ﻿@model FootballFieldManagement.Models.Service
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa";
     Layout = "~/Areas/AdminManagement/Views/Shared/Admin.cshtml";
 }
 
-<h1>Delete</h1>
+<style>
+    body {
+        background-color: #f0f8ff; /* Màu nền nhẹ */
+        font-family: Arial, sans-serif;
+    }
 
-<h3>Are you sure you want to delete this?</h3>
+    h1 {
+        color: #2f8e2b; /* Màu xanh lá cây bóng đá */
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .form-group label {
+        color: #2f8e2b; /* Màu xanh lá cây cho nhãn */
+    }
+
+    .table {
+        width: 100%;
+        margin-top: 20px;
+        background-color: #ffffff;
+        border-collapse: collapse;
+    }
+
+        .table th, .table td {
+            padding: 10px;
+            text-align: left;
+            border: 1px solid #ddd;
+        }
+
+        .table th {
+            background-color: #2f8e2b;
+            color: white;
+        }
+
+    .btn-danger {
+        background-color: #d9534f;
+        color: white;
+        border: none;
+    }
+
+        .btn-danger:hover {
+            background-color: #c9302c;
+        }
+
+    .back-link {
+        color: #2f8e2b;
+        text-decoration: none;
+    }
+
+        .back-link:hover {
+            color: #228c22;
+        }
+</style>
+
+<h1>Xóa</h1>
+
+<h3>Bạn có chắc chắn muốn xóa không?</h3>
 <div>
-    <h4>Service</h4>
+    <h4>Dịch Vụ</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ServiceName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ServiceName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="ServiceId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" /> 
+        <a class="back-link" asp-action="Index">Quay Lại Danh Sách</a>
     </form>
 </div>
