--- a/Areas/AdminManagement/Views/Shared/_SideBar.cshtml
+++ b/Areas/AdminManagement/Views/Shared/_SideBar.cshtml
@@ -1,171 +1,193 @@
-﻿﻿﻿﻿@using Microsoft.AspNetCore.Http;
+﻿@using Microsoft.AspNetCore.Http;
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
-<aside class="main-sidebar sidebar-dark-primary elevation-4 position-fixed">
+<aside class="main-sidebar sidebar-dark-primary elevation-4 position-fixed" style="background-color: #2e7d32;">
     <!-- Brand Logo -->
     <a href="/adminmanagement/dashboard" class="brand-link">
         <img src="~/images/Logo.png" alt="Logo Hunre" class="" width="75px">
-        <span class="brand-text font-weight-light ms-2">Quản lý</span>
+        <span class="brand-text font-weight-light ms-2" style="color: #fff;">Quản lý</span>
     </a>
 
-    <!-- Sidebar
-    <div class="sidebar">
+    <!-- Sidebar -->
+    <div class="sidebar" style="background-color: #388e3c;">
+
         <!-- Sidebar user panel (optional) -->
-    <div class="user-panel mt-3 pb-3 mb-3 d-flex position-fixed bottom-0 ">
-        <div class="image">
-            <img src="~/images/Logo.png" class="img-circle elevation-2" alt="Logo-Hunrre">
-        </div>
-        <div class="info">
-            @{
-                if (HttpContextAccessor.HttpContext.Session.GetString("AdminLogin") != null)
-                {
-                    <a href="#" class="d-block">@HttpContextAccessor.HttpContext.Session.GetString("AdminLogin")</a>
-                    <a asp-action="Logout" asp-controller="Login">Đăng xuất</a>
+        <div class="user-panel mt-3 pb-3 mb-3 d-flex position-fixed bottom-0 ">
+            <div class="image">
+                <img src="~/images/Logo.png" class="img-circle elevation-2" alt="Logo-Hunrre">
+            </div>
+            <div class="info">
+                @{
+                    if (HttpContextAccessor.HttpContext.Session.GetString("AdminLogin") != null)
+                    {
+                        <a href="#" class="d-block" style="color: #fff;">@HttpContextAccessor.HttpContext.Session.GetString("AdminLogin")</a>
+                        <a asp-action="Logout" asp-controller="Login" style="color: #fff;">Đăng xuất</a>
+                    }
+                    else
+                    {
+                        <a href="#" class="d-block" style="color: #fff;">NgocMai</a>
+                    }
                 }
-                else
-                {
-                    <a href="#" class="d-block">DamQuocDan</a>
-                }
-            }
-
-
+            </div>
         </div>
-    </div>
-    <!-- Sidebar Menu -->
-    <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <div class="d-flex align-items-center">
-                        <div class="d-flex justify-content-center" style="width: 30px">
-                            <i class="fa-solid fa-user-tie fa-xl"></i>
+        <!-- Sidebar Menu -->
+        <nav class="mt-2">
+            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link" style="color: #fff;">
+                        <div class="d-flex align-items-center">
+                            <div class="d-flex justify-content-center" style="width: 30px">
+                                <i class="fa-solid fa-user-tie fa-xl"></i>
+                            </div>
+                            <p class="ms-3">
+                                Tài khoản Admin
+                                <i class="right fas fa-angle-down"></i>
+                            </p>
                         </div>
-                        <p class="ms-3">
-                            Tài khoản Admin
-                            <i class="right fas fa-angle-down"></i>
-                        </p>
-                    </div>
-                </a>
-                <ul class="nav nav-treeview">
-                    <li class="nav-item">
-                        <a href="/adminmanagement/admins" class="nav-link">
-                            <i class="fas fa-edit nav-icon"></i>
-                            <p>Danh sách</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/adminmanagement/admins/create" class="nav-link">
-                            <i class="fas fa-plus-circle nav-icon"></i>
-                            <p>Thêm</p>
-                        </a>
-                    </li>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/adminmanagement/admins" class="nav-link" style="color: #fff;">
+                                <i class="fas fa-edit nav-icon"></i>
+                                <p>Danh sách</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/adminmanagement/admins/create" class="nav-link" style="color: #fff;">
+                                <i class="fas fa-plus-circle nav-icon"></i>
+                                <p>Thêm</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
 
-
-                </ul>
-            </li>
-
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <div class="d-flex align-items-center">
-                        <div class="d-flex justify-content-center" style="width: 30px">
-                            <i class="fa-solid fa-house-user fa-xl"></i>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" style="color: #fff;">
+                        <div class="d-flex align-items-center">
+                            <div class="d-flex justify-content-center" style="width: 30px">
+                                <i class="fa-solid fa-house-user fa-xl"></i>
+                            </div>
+                            <p class="ms-3">
+                                Quản lý khách hàng
+                                <i class="right fas fa-angle-down"></i>
+                            </p>
                         </div>
-                        <p class="ms-3">
-                            Quản lý khách hàng
-                            <i class="right fas fa-angle-down"></i>
-                        </p>
-                    </div>
-                </a>
-                <ul class="nav nav-treeview">
-                    <li class="nav-item">
-                        <a href="/adminmanagement/customers" class="nav-link">
-                            <i class="fas fa-edit nav-icon"></i>
-                            <p>Danh sách</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/adminmanagement/customers/create" class="nav-link">
-                            <i class="fas fa-plus-circle nav-icon"></i>
-                            <p>Thêm</p>
-                        </a>
-                    </li>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/adminmanagement/customers" class="nav-link" style="color: #fff;">
+                                <i class="fas fa-edit nav-icon"></i>
+                                <p>Danh sách</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/adminmanagement/customers/create" class="nav-link" style="color: #fff;">
+                                <i class="fas fa-plus-circle nav-icon"></i>
+                                <p>Thêm</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
 
-                </ul>
-            </li>
-
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <div class="d-flex align-items-center">
-                        <div class="d-flex justify-content-center" style="width: 30px">
-                            <i class="fa-solid fa-house-user fa-xl"></i>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" style="color: #fff;">
+                        <div class="d-flex align-items-center">
+                            <div class="d-flex justify-content-center" style="width: 30px">
+                                <i class="fa-solid fa-house-user fa-xl"></i>
+                            </div>
+                            <p class="ms-3">
+                                Quản lý dịch vụ
+                                <i class="right fas fa-angle-down"></i>
+                            </p>
                         </div>
-                        <p class="ms-3">
-                            Quản lý dịch vụ
-                            <i class="right fas fa-angle-down"></i>
-                        </p>
-                    </div>
-                </a>
-                <ul class="nav nav-treeview">
-                    <li class="nav-item">
-                        <a href="/adminmanagement/services/" class="nav-link">
-                            <i class="fas fa-edit nav-icon"></i>
-                            <p>Danh sách</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/adminmanagement/services/create" class="nav-link">
-                            <i class="fas fa-plus-circle nav-icon"></i>
-                            <p>Thêm</p>
-                        </a>
-                    </li>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/adminmanagement/services/" class="nav-link" style="color: #fff;">
+                                <i class="fas fa-edit nav-icon"></i>
+                                <p>Danh sách</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/adminmanagement/services/create" class="nav-link" style="color: #fff;">
+                                <i class="fas fa-plus-circle nav-icon"></i>
+                                <p>Thêm</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
 
-                </ul>
-            </li>
-
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <div class="d-flex align-items-center">
-                        <div class="d-flex justify-content-center" style="width: 30px">
-                            <i class="fa-solid fa-list fa-xl"></i>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" style="color: #fff;">
+                        <div class="d-flex align-items-center">
+                            <div class="d-flex justify-content-center" style="width: 30px">
+                                <i class="fa-solid fa-list fa-xl"></i>
+                            </div>
+                            <p class="ms-3">
+                                Quản lý sân
+                                <i class="right fas fa-angle-down"></i>
+                            </p>
                         </div>
-                        <p class="ms-3">
-                            Quản lý sân
-                            <i class="right fas fa-angle-down"></i>
-                        </p>
-                    </div>
-                </a>
-                <ul class="nav nav-treeview">
-                    <li class="nav-item">
-                        <a href="/adminmanagement/fields" class="nav-link">
-                            <i class="fas fa-plus-circle nav-icon"></i>
-                            <p>Danh sách</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/adminmanagement/fields/create" class="nav-link">
-                            <i class="fas fa-edit nav-icon"></i>
-                            <p>Thêm</p>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item">
-                <a href="/adminmanagement/bookings" class="nav-link">
-                    <div class="d-flex align-items-center">
-                        <div class="d-flex justify-content-center" style="width: 30px">
-                            <i class="fa-solid fa-list fa-xl"></i>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/adminmanagement/fields" class="nav-link" style="color: #fff;">
+                                <i class="fas fa-plus-circle nav-icon"></i>
+                                <p>Danh sách</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/adminmanagement/fields/create" class="nav-link" style="color: #fff;">
+                                <i class="fas fa-edit nav-icon"></i>
+                                <p>Thêm</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" style="color: #fff;">
+                        <div class="d-flex align-items-center">
+                            <div class="d-flex justify-content-center" style="width: 30px">
+                                <i class="fa-solid fa-list fa-xl"></i>
+                            </div>
+                            <p class="ms-3">
+                                Quản lý đơn dịch vụ
+                                <i class="right fas fa-angle-down"></i>
+                            </p>
                         </div>
-                        <p class="ms-3">
-                            Quản lý đơn đặt sân
-                        </p>
-                    </div>
-                </a>
-                
-            </li>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/adminmanagement/bookingservices" class="nav-link" style="color: #fff;">
+                                <i class="fas fa-plus-circle nav-icon"></i>
+                                <p>Danh sách</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/adminmanagement/bookingservices/create" class="nav-link" style="color: #fff;">
+                                <i class="fas fa-edit nav-icon"></i>
+                                <p>Thêm</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="/adminmanagement/bookings" class="nav-link" style="color: #fff;">
+                        <div class="d-flex align-items-center">
+                            <div class="d-flex justify-content-center" style="width: 30px">
+                                <i class="fa-solid fa-list fa-xl"></i>
+                            </div>
+                            <p class="ms-3">
+                                Quản lý đơn đặt sân
+                            </p>
+                        </div>
+                    </a>
+                </li>
 
-        </ul>
+            </ul>
 
-    </nav>
+        </nav>
 
     </div>
 </aside>
