--- a/Views/Bookings/Details.cshtml
+++ b/Views/Bookings/Details.cshtml
@@ -5,57 +5,113 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Chi tiết Đặt Sân</h1>
 
-<div>
-    <h4>Booking</h4>
+<div class="booking-details-container">
+    <h4>Thông tin đặt sân</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BookingTime)
+        <dt class="col-sm-3">
+            Thời gian đặt
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.BookingTime)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Duration)
+
+        <dt class="col-sm-3">
+            Thời gian sử dụng
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.Duration)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalPrice)
+
+        <dt class="col-sm-3">
+            Tổng giá
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.TotalPrice)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalServicePrice)
+
+        <dt class="col-sm-3">
+            Tổng giá dịch vụ
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.TotalServicePrice)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalAmount)
+
+        <dt class="col-sm-3">
+            Tổng số tiền
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.TotalAmount)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
+
+        <dt class="col-sm-3">
+            Khách hàng
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerId)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.Customer.Username)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Field)
+
+        <dt class="col-sm-3">
+            Sân bóng
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Field.FieldId)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.Field.FieldName)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.BookingId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+<div class="back-link">
+    <a onclick="window.history.back()" class="btn btn-primary">Quay lại danh sách</a>
 </div>
+
+
+    <style>
+        /* Thêm CSS cho giao diện đẹp hơn */
+        .booking-details-container {
+            margin-top: 30px;
+            padding: 20px;
+            background-color: #f9f9f9;
+            border-radius: 8px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+            .booking-details-container h4 {
+                font-size: 1.5rem;
+                font-weight: bold;
+                color: #333;
+            }
+
+        dt {
+            font-weight: bold;
+            color: #333;
+        }
+
+        dd {
+            font-size: 1.1rem;
+            color: #555;
+        }
+
+        .back-link a {
+            text-decoration: none;
+            padding: 10px 20px;
+            margin-top: 20px;
+            display: inline-block;
+            border-radius: 4px;
+        }
+
+        .btn-warning {
+            background-color: #ffc107;
+            color: white;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            color: white;
+        }
+
+        .back-link a:hover {
+            opacity: 0.8;
+        }
+    </style>
